samples/_failures_safe/1761531423_fd8be1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71ffeba0.c: In function ‘apply_transform’:
./samples/SAFE/__tmp_71ffeba0.c:135:41: error: ‘struct GeometricTransform’ has no member named ‘trans’
  135 |     translated.x = rotated.x + transform.trans
      |                                         ^
./samples/SAFE/__tmp_71ffeba0.c:135:47: error: expected ‘;’ at end of input
  135 |     translated.x = rotated.x + transform.trans
      |                                               ^
      |                                               ;
./samples/SAFE/__tmp_71ffeba0.c:135:5: error: expected declaration or statement at end of input
  135 |     translated.x = rotated.x + transform.trans
      |     ^~~~~~~~~~
